remove yarn version

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "b6a4-medistore-api",
-  "packageManager": "yarn@4.9.2",
   "scripts": {
     "dev": "tsx --watch src/server.ts",
-    "seed::admin": "tsx src/scripts/seed-admin.ts"
+    "seed::admin": "tsx src/scripts/seed-admin.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
