--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "tsx --watch src/server.ts",
     "seed::admin": "tsx src/scripts/seed-admin.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/server.js"
   },
   "devDependencies": {
