--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # Whether you use PnP or not, the node_modules folder is often used to store
 # build artifacts that should be gitignored
 node_modules
+dist
 
 # secret files
 .env
