--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "b6a4-medistore-api",
+  "type": "module",
   "scripts": {
     "dev": "tsx --watch src/server.ts",
     "seed::admin": "tsx src/scripts/seed-admin.ts",
-    "build": "prisma generate && tsc",
-    "start": "node dist/server.js"
+    "build": "prisma generate",
+    "start": "tsx src/server.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
